# chu_pico

./: .gitignore  README.md  README_CN.md
PCB/air/: chu_air.kicad_pcb  chu_air.kicad_prl  chu_air.kicad_pro  chu_air.kicad_sch  fp-info-cache  fp-lib-table
PCB/air/chu_air.pretty/: 6P_Air_Conn.kicad_mod
PCB/main/: chu_main.kicad_pcb  chu_main.kicad_prl  chu_main.kicad_pro  chu_main.kicad_sch  chu_main.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
PCB/main/3dmodels/: EVQ-P46B3M.step  chu_keypad_lgp.step  gp2y0e03.3mf  gp2y0e03.csg  gp2y0e03.scad  gp2y0e03.wrl  keypad_lgp.csg  keypad_lgp.scad  (+1 more)
PCB/pn532_ant/: pn532_ant.kicad_pcb  pn532_ant.kicad_prl  pn532_ant.kicad_pro  pn532_ant.kicad_sch
Production/CAD/: chu_pico_base.stl  chu_pico_cover.stl  chu_pico_cover_aime.stl  chu_pico_cover_base.stl  chu_pico_cover_insert.stl  chu_pico_cover_insert_aime.stl  chu_pico_ir_cover.dwg  chu_pico_ir_cover.dxf  chu_pico_lgp.dwg  chu_pico_lgp.dxf  chu_pico_lgp_fixer.stl  chu_pico_support.stl  chu_pico_top_cover.stl
Production/Firmware/: chu_pico.uf2  chu_pico_led_test.uf2
cad/: keypad.dxf  keypad_numbers.xlsx
firmware/: CMakeLists.txt  README.md  chu_pico.uf2
firmware/src/: CMakeLists.txt  aime.c  aime.h  air.c  air.h  board_defs.h  button.c  button.h  cli.c  cli.h  cmd.c  cmd.h  commands.c  config.c  config.h  gp2y0e.h  i2c_hub.h  lzfx.c  lzfx.h  main.c  mpr121.c  mpr121.h  pn532.c  pn532.h  rgb.c  rgb.h  save.c  save.h  slider.c  slider.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  vl53l0x.c  vl53l0x.h  vl6180.c  vl6180.h
tools/: Redboard.txt
(+28 files in other folders)
